package asm;

import org.objectweb.asm.ClassVisitor;

public class ClassVisitor {
    
}
